fixed pop-up flicker

--- a/styles/pop-up.css
+++ b/styles/pop-up.css
@@ -95,8 +95,9 @@
     width: 100%;
     margin: 10% 0;
 }
-
-
+.hide{
+    opacity: 0;
+}
 /* 
 jamie: 758.1%
 portfolio: 363.9
